Fix overflow

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,10 +1,11 @@
 body {
   background-color: $color_beige;
-  border: 3px solid $color_blue;  
+  height: 100vh;
 }
 
 #__next {
   box-sizing: border-box;
+  border: 3px solid $color_blue;
   height: 100vh;
   padding: 30px;
   position: relative;
